# Hare

./: .editorconfig  .gitmodules  CODE_OF_CONDUCT.md  README.md  SECURITY.md  bun.lockb  index.html  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
src/: API.tsx  API2.tsx  App.tsx  Extension.ts  api.tsx  hare.d.ts  hare.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: extensions.rs  file_system.rs  lib.rs  main.rs  procurator.rs
src/assets/: Icons.tsx
src/components/main/: mainScreen.tsx
src/components/main/activityBar/: ActivityBar.tsx  ActivityBarEntry.tsx
src/components/main/activityBar/actions/: ActionItem.tsx  ActionsContainer.tsx
src/components/main/commands/: Command.tsx
src/components/main/contextMenu/: ContextMenu.tsx  contextMenuContext.tsx
src/components/main/editorView/: EditorContainer.tsx  EditorEntry.tsx  EditorInstance.tsx  EditorTab.tsx  EditorView.tsx  theme.ts  theme2.ts
src/components/main/sideBar/: FileTree.tsx  SideBar.tsx
src/components/welcome/: WelcomeScreen.css  WelcomeScreen.tsx
src/config/: config.json
src/config/themes/: dark-theme.css  light-theme.css
src/css/: activitybar.css  commands.css  contextMenu.css  dragbar.css  editor.css  index.css  miscellaneous.css  sideBar.css  statusBar.css
src/extensions/file-explorer/src/: src.tsx
src/helpers/: Procurator.ts  events.ts
src/helpers/commands/: defaultCommands.ts
src/helpers/editors/: editor.ts
src/helpers/functions/: when.ts
src/types/: Extension.ts  Procurator.ts
(+10 files in other folders)
